# tomoki-python-setup

./: .gitignore  README.md  pyproject.toml  ruff.toml
.claude/commands/: ruff.md
src/: __init__.py  args_kwargs.py  generics_protocol.py  hello.py  narrowing.py  overload_literal.py  pandas_types.py  positional_args.py  type_inference.py  typed_dict_dataclass.py
